Fixed layout issues.

--- a/web/module/resources/pws.css
+++ b/web/module/resources/pws.css
@@ -488,7 +488,11 @@ div#tabs .ui-tabs-nav li.ui-tabs-selected {
     width: 250px;
 }
 
-.ui-tabs .ui-tabs-nav
-{
+.ui-tabs .ui-tabs-nav {
     background: #cc9966;
+    overflow: inherit;
+    border-top-left-radius: 7px;
+    border-top-right-radius: 7px;
+    border-bottom-left-radius: 0px;
+    border-bottom-right-radius: 0px;
 }
